# oled-care

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  release.yml
__tests__/: TestMain.h  tests.cpp
scripts/: smoke-test.ps1
src/: AppContract.h.in  OledCare.manifest  VersionInfo.h.in  app.rc  injector.cpp  injector.h  main.cpp  service.cpp  service.h
src/hook/: dllmain.cpp  hook.rc
src/setup/: main.cpp  setup.manifest  setup.rc
src/setup/ui/: Theme.cpp  Theme.h  Wizard.cpp  Wizard.h
src/setup/ui/components/: DarkButton.cpp  DarkButton.h  FolderBrowser.cpp  FolderBrowser.h  InstallerLogo.cpp  InstallerLogo.h  WizardChrome.cpp  WizardChrome.h
src/ui/: AppShared.h  SettingsLogic.h  SettingsModel.cpp  SettingsModel.h  Theme.cpp  Theme.h
src/ui/components/: AboutDialog.cpp  AboutDialog.h  AppIcon.cpp  AppIcon.h  ScreenDimmer.cpp  ScreenDimmer.h  SettingsWindow.cpp  SettingsWindow.h  StyledCombo.cpp  StyledCombo.h  TrayMenu.cpp  TrayMenu.h
